ci: pin all ci workflows
Signed-off-by: Alessio Greggi <ale_grey_91@hotmail.it>

--- a/.github/workflows/check-broken-links.yaml
+++ b/.github/workflows/check-broken-links.yaml
@@ -1,5 +1,4 @@
 name: Markdown link check
-
 on:
   push:
     branches: [master, dev]
@@ -7,8 +6,8 @@ jobs:
   markdown-link-check:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Check links
-      uses: gaurav-nelson/github-action-markdown-link-check@v1
-      with:
-        use-verbose-mode: 'yes'
+      - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c
+      - name: Check links
+        uses: gaurav-nelson/github-action-markdown-link-check@5c5dfc0ac2e225883c0e5f03a85311ec2830d368
+        with:
+          use-verbose-mode: 'yes'
