--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -1,9 +1,8 @@
 name: pr-tests
-
 on:
   pull_request:
-    branches: [ dev, master ]
-    types: [ opened ]
+    branches: [dev, master]
+    types: [opened]
     paths-ignore:
       # Do not run the pipeline if only Markdown files changed
       - '**.yaml'
@@ -12,27 +11,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: 1.19
-
-    - name: golangci-lint
-      continue-on-error: true
-      uses: golangci/golangci-lint-action@v3
-      with:
-        version: latest
-        args: --timeout 10m ./...
-        only-new-issues: true
-
-    - name: Test
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: go test -v -race ./...
-        
-    - name: Build
-      run: go build -v github.com/kubescape/regolibrary/gitregostore/...
-
-
+      - uses: actions/checkout@dc323e67f16fb5f7663d20ff7941f27f5809e9b6
+      - name: Set up Go
+        uses: actions/setup-go@bfdd3570ce990073878bf10f6b2d79082de49492
+        with:
+          go-version: 1.19
+      - name: golangci-lint
+        continue-on-error: true
+        uses: golangci/golangci-lint-action@08e2f20817b15149a52b5b3ebe7de50aff2ba8c5
+        with:
+          version: latest
+          args: --timeout 10m ./...
+          only-new-issues: true
+      - name: Test
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: go test -v -race ./...
+      - name: Build
+        run: go build -v github.com/kubescape/regolibrary/gitregostore/...
