--- a/.github/workflows/rego-tests.yaml
+++ b/.github/workflows/rego-tests.yaml
@@ -1,25 +1,20 @@
 name: test regos
-
 on:
   pull_request:
-    branches: [ dev, master ]
-    types: [ opened ]
-
+    branches: [dev, master]
+    types: [opened]
 jobs:
   once:
     name: Build, Test Regos
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v1
-
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with: 
-        go-version: 1.19
-
-    - name: Test Regoes
-      working-directory: testrunner
-      run: |
-        apt update && apt install -y cmake
-        GOPATH=$(go env GOPATH) make
+      - uses: actions/checkout@50fbc622fc4ef5163becd7fab6573eac35f8462e
+      - name: Set up Go
+        uses: actions/setup-go@bfdd3570ce990073878bf10f6b2d79082de49492
+        with:
+          go-version: 1.19
+      - name: Test Regoes
+        working-directory: testrunner
+        run: |-
+          apt update && apt install -y cmake
+          GOPATH=$(go env GOPATH) make
