--- a/.github/workflows/update-docs.yaml
+++ b/.github/workflows/update-docs.yaml
@@ -1,29 +1,24 @@
 name: Updating documentation
-
 on:
   push:
-    branches: [ master ]
-
+    branches: [master]
 jobs:
   once:
     name: Upload to documentation
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@dc323e67f16fb5f7663d20ff7941f27f5809e9b6
         name: checkout repo content
-
       - name: setup python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@75f3110429a8c05be0e1bf360334e4cced2b63fa
         with:
-          python-version: 3.8 
-
+          python-version: 3.8
       - name: install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install requests
-        
-      - name: execute upload script 
+      - name: execute upload script
         env:
           README_API_KEY: ${{ secrets.README_API_KEY }}
-        run: |
+        run: |-
           python ./scripts/upload-readme.py
