--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -6,32 +6,24 @@ on:
         description: 'Tag name'
         required: true
         type: string
-
   push:
     tags:
       - 'v*.*.*-rc.*'
 
-env:
-  REGO_ARTIFACT_KEY_NAME: rego_artifact
-  REGO_ARTIFACT_PATH: release
-
 jobs:
-
-  build-and-rego-test:
-    # if: endsWith(github.ref, 'main') == true
-    name: Build and test rego artifacts
+  once:
+    name: Build, Test, Create And Upload Release
     runs-on: ubuntu-latest
     outputs:
-      NEW_TAG: ${{ steps.tag-calculator.outputs.NEW_TAG }}
-      REGO_ARTIFACT_KEY_NAME: ${{ steps.set_outputs.outputs.REGO_ARTIFACT_KEY_NAME }}
-      REGO_ARTIFACT_PATH: ${{ steps.set_outputs.outputs.REGO_ARTIFACT_PATH }}
+      upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
       - uses: actions/checkout@24cb9080177205b6e8c946b17badbe402adc938f
         name: checkout repo content
         with:
-          token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN }} #name of the token
         
       - id: tag-calculator
+        # uses: ./.github/actions/tag-action
         uses: kubescape/workflows/.github/actions/tag-action@main
         with: 
           ORIGINAL_TAG: ${{ inputs.TAG }}
@@ -48,7 +40,6 @@ jobs:
         run: |
           apt update && apt install -y cmake
           GOPATH=$(go env GOPATH) make
-
       - name: setup python
         uses: actions/setup-python@75f3110429a8c05be0e1bf360334e4cced2b63fa
         with:
@@ -124,11 +115,21 @@ jobs:
         id: create_release_upload_assets
         uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844
         with:
-          token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-          name: Release ${{ needs.build-and-rego-test.outputs.NEW_TAG }}
-          tag_name: ${{ needs.build-and-rego-test.outputs.NEW_TAG }}
+          token: ${{ secrets.PAT_TOKEN }}
+          name: Release ${{ inputs.TAG }}
+          tag_name: ${{ inputs.TAG }}
           body: ${{ github.event.pull_request.body }}
           draft: false
           fail_on_unmatched_files: true
           prerelease: false
-          files: '${{ env.REGO_ARTIFACT_PATH }}/*'
+          files: 'release/*'
+
+      - run: git status
+
+      - run: git diff
+
+      - name: Commit change and push
+        uses: stefanzweifel/git-auto-commit-action@v4.16.0
+        with:
+          branch: main
+          commit_message: "Updated..."
