--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -116,10 +116,10 @@ jobs:
     needs: [build-and-rego-test]
     if: |
       always() &&
-      (contains(needs.*.result, 'success') &&
-      (!contains(needs.*.result, 'skipped') ||
-      (!contains(needs.*.result, 'failure') ||
-      (!contains(needs.*.result, 'cancelled'))
+      contains(needs.*.result, 'success') &&
+      !contains(needs.*.result, 'skipped') &&
+      !contains(needs.*.result, 'failure') &&
+      !contains(needs.*.result, 'cancelled')
     with:
       DOWNLOAD_ARTIFACT_KEY_NAME: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_KEY_NAME }}
       BINARY_TESTS: '[  "scan_nsa", 
