adding workflows as submodules
Signed-off-by: David Wertenteil <dwertent@armosec.io>

--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -49,6 +49,7 @@ jobs:
       - uses: actions/checkout@24cb9080177205b6e8c946b17badbe402adc938f
         name: checkout repo content
         with:
+          submodules: recursive
           token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
         
       # Test using Golang OPA hot rule compilation
@@ -98,7 +99,7 @@ jobs:
 
   # test kubescape with regolibrary artifacts 
   ks-and-rego-test:
-    uses: kubescape/workflows/.github/workflows/kubescape-cli-e2e-tests.yaml@main
+    uses: ./workflows/.github/workflows/kubescape-cli-e2e-tests.yaml
     needs: [build-and-rego-test]
     with:
       DOWNLOAD_ARTIFACT_KEY_NAME: ${{ needs.build-and-rego-test.outputs.REGO_ARTIFACT_KEY_NAME }}
