revert latest change
Signed-off-by: David Wertenteil <dwertent@armosec.io>

--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -29,21 +29,14 @@ jobs:
 
   # main job of testing and building the env. 
   test_pr_checks:
-    name: Test PR checks
-    runs-on: ubuntu-latest
     needs: [markdown-link-check]
     permissions:
       pull-requests: write
-    steps:
-    - uses: actions/checkout@24cb9080177205b6e8c946b17badbe402adc938f
-      name: checkout repo content
-      with:
-        submodules: recursive
-        token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-    - uses: ./workflows/.github/workflows/go-basic-tests.yaml
-      with:
-        GO_VERSION: 1.19
-        BUILD_PATH: github.com/kubescape/regolibrary/gitregostore/...
+    uses: kubescape/workflows/.github/workflows/go-basic-tests.yaml@main
+    with:
+      GO_VERSION: 1.19
+      BUILD_PATH: github.com/kubescape/regolibrary/gitregostore/...
+    secrets: inherit
 
 
   build-and-rego-test:
