--- a/.github/workflows/pr-tests.yaml
+++ b/.github/workflows/pr-tests.yaml
@@ -19,7 +19,6 @@ env:
 
 jobs:
   wf-preparation:
-    name: secret-validator
     runs-on: ubuntu-latest
     steps:
       - name: check if the necessary secrets are set in github secrets
@@ -32,6 +31,8 @@ jobs:
           SECRET_KEY: ${{ secrets.SECRET_KEY_PROD }}
           REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
           REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
+      - name: test the env - test-yuval
+        if: ${{ always() }}
         if: ${{ env.CUSTOMER == '' }}
         run: 'echo "echo the secret \"MY_SECRET\" has not been made; echo please go to \"settings \> secrets \> actions\" to create it"'
 
