--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -65,11 +65,11 @@ jobs:
       - run: python ./scripts/export.py
 
       # removing release artifacts file extensions 
-      # - name: Strip Metadata Files Extensions
-      #   run: |
-      #     cd release
-      #     find -type f -name '*.json' | while read f; do mv "$f" "${f%.json}"; done
-      #     find -type f -name '*.csv' | while read f; do mv "$f" "${f%.csv}"; done
+      - name: Strip Metadata Files Extensions
+        run: |
+          cd release
+          find -type f -name '*.json' | while read f; do mv "$f" "${f%.json}"; done
+          find -type f -name '*.csv' | while read f; do mv "$f" "${f%.csv}"; done
 
       - run: ls -laR
 
@@ -119,7 +119,6 @@ jobs:
     name: create release and upload assets
     runs-on: ubuntu-latest
     steps:
-
       - uses: actions/download-artifact@9bc31d5ccc31df68ecc42ccf4149144866c47d8a # ratchet:actions/download-artifact@v3.0.2
         id: download-artifact
         with:
